scroll smoothness added and optimize the code

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </div>
     <main>
       <section class="owner">
-        <h1>
+        <h1 id="owner-h1">
           I'm <span id="Owner-Name">Emily Perker</span> a Professional
           Photographer from New York city
         </h1>
-        <p class="Owner-description">
+        <p id="Owner-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere saepe
           expedita beatae minus accusamus odio porro ipsum officia enim illum?
         </p>
-        <button type="submit">AVAILABLE FOR HIRE</button>
+        <button id="owner-button" type="submit">AVAILABLE FOR HIRE</button>
       </section>
       <section class="photos">
         <div><img src="./src/cai-unsplash.jpg" alt="some place" /></div>
