--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <!-- here the start -->
     <div class="top">
       <header>PhotoFolio</header>
       <nav>
