--- a/index.html
+++ b/index.html
@@ -40,15 +40,39 @@
         <div>
           <img src="./src/geraltyichen-unsplash.jpg" alt="someplace in japan" />
         </div>
-        <div><img src="./src/karsten-unsplash.jpg" alt="cute dog" /></div>
-        <div><img src="./src/kelly-unsplash.jpg" alt="A lady" /></div>
-        <div><img src="./src/neom-unsplash.jpg" alt="a man in cave" /></div>
-        <div><img src="./src/pawan-unsplash.jpg" alt="Eagle" /></div>
-        <div><img src="./src/re-unsplash.jpg" alt="beach" /></div>
-        <div><img src="./src/sam.jpg" alt="A person" /></div>
-        <div><img src="./src/soren-unsplash.jpg" alt="A Monkey" /></div>
-        <div><img src="./src/stephen-unsplash.jpg" alt="paragliding" /></div>
-        <div><img src="./src/xavier-unsplash.jpg" alt="Mountain" /></div>
+        <div>
+          <img loading="lazy" src="./src/karsten-unsplash.jpg" alt="cute dog" />
+        </div>
+        <div>
+          <img loading="lazy" src="./src/kelly-unsplash.jpg" alt="A lady" />
+        </div>
+        <div>
+          <img
+            loading="lazy"
+            src="./src/neom-unsplash.jpg"
+            alt="a man in cave"
+          />
+        </div>
+        <div>
+          <img loading="lazy" src="./src/pawan-unsplash.jpg" alt="Eagle" />
+        </div>
+        <div>
+          <img loading="lazy" src="./src/re-unsplash.jpg" alt="beach" />
+        </div>
+        <div><img loading="lazy" src="./src/sam.jpg" alt="A person" /></div>
+        <div>
+          <img loading="lazy" src="./src/soren-unsplash.jpg" alt="A Monkey" />
+        </div>
+        <div>
+          <img
+            loading="lazy"
+            src="./src/stephen-unsplash.jpg"
+            alt="paragliding"
+          />
+        </div>
+        <div>
+          <img loading="lazy" src="./src/xavier-unsplash.jpg" alt="Mountain" />
+        </div>
       </section>
     </main>
   </body>
